--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <title>Payroll.Management</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Smarthr - Codeigniter Admin Template" />
+    <meta
+      name="keywords"
+      content="admin, estimates, bootstrap, business, corporate, creative, management, minimal, modern, accounts, invoice, html5, responsive, CRM, Projects"
+    />
+    <meta name="author" content="Dreamguys - Codeigniter Admin Template" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -12,13 +19,182 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/img/favicon.png"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/bootstrap.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/font-awesome.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/line-awesome.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/plugins/alertify/alertify.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/plugins/lightbox/glightbox.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/plugins/c3-chart/c3.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/plugins//toastr/toatr.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/select2.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/bootstrap-datetimepicker.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/fullcalendar.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/plugins/summernote/dist/summernote-bs4.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/dataTables.bootstrap4.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/style.css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script
+      type="text/javascript"
+      id="debugbar_loader"
+      data-time="1661187138"
+      src="index.php?debugbar"
+    ></script>
+    <script type="text/javascript" id="debugbar_dynamic_script"></script>
+    <style type="text/css" id="debugbar_dynamic_style"></style>
+
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="assets/img/favicon.png"
+    />
+
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="assets/css/line-awesome.min.css" />
+
+    <link rel="stylesheet" href="assets/plugins/alertify/alertify.min.css" />
+
+    <link rel="stylesheet" href="assets/plugins/lightbox/glightbox.min.css" />
+
+    <link rel="stylesheet" href="assets/plugins/c3-chart/c3.min.css" />
+
+    <link rel="stylesheet" href="assets/plugins/toastr/toatr.css" />
+
+    <link rel="stylesheet" href="assets/css/select2.min.css" />
+
+    <link rel="stylesheet" href="assets/css/bootstrap-datetimepicker.min.css" />
+
+    <link rel="stylesheet" href="assets/css/fullcalendar.min.css" />
+
+    <link
+      rel="stylesheet"
+      href="assets/plugins/summernote/dist/summernote-bs4.css"
+    />
+
+    <link rel="stylesheet" href="assets/css/dataTables.bootstrap4.min.css" />
+
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <app-root></app-root>
+    <script
+      data-cfasync="false"
+      src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
+
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+
+    <script src="assets/js/jquery.slimscroll.min.js"></script>
+
+    <script src="assets/js/select2.min.js"></script>
+
+    <script src="assets/js/moment.min.js"></script>
+    <script src="assets/js/bootstrap-datetimepicker.min.js"></script>
+
+    <script src="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+
+    <script src="assets/js/jquery-ui.min.js"></script>
+    <script src="assets/js/fullcalendar.min.js"></script>
+    <script src="assets/js/jquery.fullcalendar.js"></script>
+
+    <script src="assets/js/jquery.dataTables.min.js"></script>
+    <script src="assets/js/dataTables.bootstrap4.min.js"></script>
+
+    <script src="assets/js/validation.init.js"></script>
+
+    <script src="assets/plugins/morris/morris.min.js"></script>
+    <script src="assets/plugins/raphael/raphael.min.js"></script>
+    <script src="assets/js/chart.js"></script>
+
+    <script src="assets/js/app.js"></script>
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/jquery-3.6.0.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/jquery.slimscroll.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/select2.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/moment.min.js"></script>
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/bootstrap-datetimepicker.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/jquery-ui.min.js"></script>
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/fullcalendar.min.js"></script>
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/jquery.fullcalendar.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/jquery.dataTables.min.js"></script>
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/dataTables.bootstrap4.min.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/validation.init.js"></script>
+
+    <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/app.js"></script>
   </body>
 </html>
