--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -89,6 +97,11 @@
       rel="stylesheet"
       href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/style.css"
     />
+    <script src="https://use.fontawesome.com/4550939644.js"></script>
+    <script
+      src="https://kit.fontawesome.com/9fa91ed8d7.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <script
@@ -96,6 +109,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
     <script
       type="text/javascript"
       id="debugbar_loader"
@@ -146,6 +160,13 @@
       data-cfasync="false"
       src="../../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
     ></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="assets/js/jquery-3.6.0.min.js"></script>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
