edited the forms for edit, add and delete

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,11 @@
       rel="stylesheet"
       href="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/css/style.css"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/font-awesome-line-awesome/css/all.min.css"
+    />
     <script src="https://use.fontawesome.com/4550939644.js"></script>
     <script
       src="https://kit.fontawesome.com/9fa91ed8d7.js"
@@ -122,28 +127,37 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/favicon.png"
+      href="/src/assets/image/favicon.png"
     />
 
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/font-awesome.min.css" />
 
-    <link rel="stylesheet" href="assets/css/line-awesome.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/line-awesome.min.css" />
 
-    <link rel="stylesheet" href="assets/plugins/alertify/alertify.min.css" />
+    <link
+      rel="stylesheet"
+      href="/src/assets/plugins/alertify/alertify.min.css"
+    />
 
-    <link rel="stylesheet" href="assets/plugins/lightbox/glightbox.min.css" />
+    <link
+      rel="stylesheet"
+      href="/src/assets/plugins/lightbox/glightbox.min.css"
+    />
 
-    <link rel="stylesheet" href="assets/plugins/c3-chart/c3.min.css" />
+    <link rel="stylesheet" href="/src/assets/plugins/c3-chart/c3.min.css" />
 
-    <link rel="stylesheet" href="assets/plugins/toastr/toatr.css" />
+    <link rel="stylesheet" href="/src/assets/plugins/toastr/toatr.css" />
 
-    <link rel="stylesheet" href="assets/css/select2.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/select2.min.css" />
 
-    <link rel="stylesheet" href="assets/css/bootstrap-datetimepicker.min.css" />
+    <link
+      rel="stylesheet"
+      href="/src/assets/css/bootstrap-datetimepicker.min.css"
+    />
 
-    <link rel="stylesheet" href="assets/css/fullcalendar.min.css" />
+    <link rel="stylesheet" href="/src/assets/css/fullcalendar.min.css" />
 
     <link
       rel="stylesheet"
@@ -152,7 +166,7 @@
 
     <link rel="stylesheet" href="assets/css/dataTables.bootstrap4.min.css" />
 
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="/src/assets/css/style.css" />
   </head>
   <body>
     <app-root></app-root>
@@ -167,33 +181,33 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script src="/src/assets/js/jquery-3.6.0.min.js"></script>
 
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/src/assets/js/bootstrap.bundle.min.js"></script>
 
-    <script src="assets/js/jquery.slimscroll.min.js"></script>
+    <script src="/src/assets/js/jquery.slimscroll.min.js"></script>
 
-    <script src="assets/js/select2.min.js"></script>
+    <script src="/src/assets/js/select2.min.js"></script>
 
-    <script src="assets/js/moment.min.js"></script>
-    <script src="assets/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="/src/assets/js/moment.min.js"></script>
+    <script src="/scr/assets/js/bootstrap-datetimepicker.min.js"></script>
 
-    <script src="assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
+    <script src="/src/assets/plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js"></script>
 
-    <script src="assets/js/jquery-ui.min.js"></script>
-    <script src="assets/js/fullcalendar.min.js"></script>
-    <script src="assets/js/jquery.fullcalendar.js"></script>
+    <script src="/src/assets/js/jquery-ui.min.js"></script>
+    <script src="/src/assets/js/fullcalendar.min.js"></script>
+    <script src="/src/assets/js/jquery.fullcalendar.js"></script>
 
-    <script src="assets/js/jquery.dataTables.min.js"></script>
-    <script src="assets/js/dataTables.bootstrap4.min.js"></script>
+    <script src="/src/assets/js/jquery.dataTables.min.js"></script>
+    <script src="/src/assets/js/dataTables.bootstrap4.min.js"></script>
 
-    <script src="assets/js/validation.init.js"></script>
+    <script src="/src/assets/js/validation.init.js"></script>
 
-    <script src="assets/plugins/morris/morris.min.js"></script>
-    <script src="assets/plugins/raphael/raphael.min.js"></script>
-    <script src="assets/js/chart.js"></script>
+    <script src="/src/assets/plugins/morris/morris.min.js"></script>
+    <script src="/src/assets/plugins/raphael/raphael.min.js"></script>
+    <script src="/src/assets/js/chart.js"></script>
 
-    <script src="assets/js/app.js"></script>
+    <script src="/src/assets/js/app.js"></script>
     <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/jquery-3.6.0.min.js"></script>
 
     <script src="https://smarthr-ci.dreamguystech.com/template/dark/public/assets/js/bootstrap.bundle.min.js"></script>
