--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,7 @@
 
     <link rel="stylesheet" href="assets/css/dataTables.bootstrap4.min.css" />
 
-    <link rel="stylesheet" href="/src/assets/css/style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <app-root></app-root>
